--- a/new_recipe.html
+++ b/new_recipe.html
@@ -80,51 +80,20 @@
     </div>
   </nav>
 
-  <!-- recipe form -->
-  <form id="user-info-form"
-    class="flex flex-col justify-center mx-auto container w-[75%] md:w-[50%] md:mx-auto max-h-fit bg-white border-1 border-gray-500 rounded-2xl shadow-2xl my-10 p-5">
-    <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
-      <p class="text-center">Add new recipe</p>
-      <div class="my-6">
-        <label for="recipe-name" class="block mb-2 text-sm font-medium text-gray-900">age(years)</label>
-        <input type="number" id="recipe-name" placeholder="Recipe Name"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      </div>
-      <div class="mb-6">
-        <label for="weight" class="block mb-2 text-sm font-medium text-gray-900">weight(kg)</label>
-        <input type="number" id="weight" placeholder=""
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      </div>
-      <div class="mb-6">
-        <label for="height" class="block mb-2 text-sm font-medium text-gray-900">height(cm)</label>
-        <input type="number" id="height" placeholder="height in cm"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      </div>
-      <!-- Gender drop-down -->
-      <div class="mb-6">
-        <form class="max-w-sm mx-auto">
-          <label for="gender" class="block mb-2 text-sm font-medium text-gray-900">Gender</label>
-          <select id="gender"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-            <option value="" disabled selected>Select your gender</option>
-            <option>male</option>
-            <option>female</option>
-          </select>
-        </form>
-      </div>
-      <!-- Save and Cancel Buttons -->
-      <div class="flex items-center justify-between">
-        <button id="cancel" type="reset"
-          class=" max-w-fit bg-transparent hover:bg-blue-500 text-[#2d58b1] text-sm font-semibold hover:text-white py-2 px-4 border border-[#2d58b1] hover:border-transparent rounded">
-          Cancel
-        </button>
-        <button id="save" type="submit"
-          class=" max-w-fit bg-[#2d58b1] text-white text-sm  hover:bg-blue-500 font-bold py-2 px-4 rounded">
-          Save
-        </button>
-      </div>
+  <!-- Main Content -->
+  <div class="md:flex md:items-center md:justify-between">
+    <h1 class="text-center p-3 font-sans font-bold text-2xl"><span id="recipeName"></span></h1>
+    <!-- this is gonna appear when you click on the name so you can edit it. have to java script it  -->
+    <!-- <div class="">
+      <label for="large-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Large input</label>
+      <input type="text" id="large-input"
+        class="block w-full p-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 text-base focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+    </div>
+    <div class="mt-4 flex justify-end">
+      <button type="button" class="mr-4 inline-flex items-center rounded-md bg-indigo-600 px-5 py-3 text-md font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
+    </div> -->
+  </div>
 
-  </form>
 
   <!-- Bottom Navigation Bar -->
   <footer id="general-bottom-nav" class="fixed inset-x-0 bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
