--- a/profile.html
+++ b/profile.html
@@ -47,48 +47,51 @@
             class="flex flex-col justify-center mx-auto container w-[75%] md:w-[50%] md:mx-auto max-h-fit bg-white border-1 border-gray-500 rounded-2xl shadow-2xl my-10 p-5 mb-10">
             <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                 <p class="text-center">Welcome! <span id="name"></span></p>
-                <!-- avatar -->
-                <div
-                    class="relative mt-6 mx-auto overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600 size-24 flex items-center justify-center">
-                    <svg class="flex size-10 items-center text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
-                            clip-rule="evenodd">
-                        </path>
-                    </svg>
+            </h1>
+            <!-- avatar -->
+            <div
+                class="relative mt-6 mx-auto overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600 size-24 flex items-center justify-center">
+                <svg class="flex size-10 items-center text-gray-400" fill="currentColor" viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
+                        clip-rule="evenodd">
+                    </path>
+                </svg>
+            </div>
+            <fieldset id="personal_info" disabled>
+                <div class="my-6">
+                    <label for="name-field" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+                    <input type="text" id="nameField" placeholder="name"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                 </div>
-                <fieldset id="personal_info" disabled>
-                    <div class="my-6">
-                        <label for="name-field" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
-                        <input type="text" id="nameField" placeholder="name"
+                <div class="my-6">
+                    <label for="age" class="block mb-2 text-sm font-medium text-gray-900">age(years)</label>
+                    <input type="number" id="age" placeholder="age"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                </div>
+                <div class="mb-6">
+                    <label for="weight" class="block mb-2 text-sm font-medium text-gray-900">weight(kg)</label>
+                    <input type="number" id="weight" placeholder="weight in kg"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                </div>
+                <div class="mb-6">
+                    <label for="height" class="block mb-2 text-sm font-medium text-gray-900">height(cm)</label>
+                    <input type="number" id="height" placeholder="height in cm"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                </div>
+                <!-- Gender drop-down -->
+                <div class="mb-6">
+                    <div class="max-w-sm mx-auto">
+                        <label for="gender" class="block mb-2 text-sm font-medium text-gray-900">Gender</label>
+                        <select id="gender"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="" disabled selected>Select your gender</option>
+                            <option>male</option>
+                            <option>female</option>
+                        </select>
                     </div>
-                    <div class="my-6">
-                        <label for="age" class="block mb-2 text-sm font-medium text-gray-900">age(years)</label>
-                        <input type="number" id="age" placeholder="age"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    </div>
-                    <div class="mb-6">
-                        <label for="weight" class="block mb-2 text-sm font-medium text-gray-900">weight(kg)</label>
-                        <input type="number" id="weight" placeholder="weight in kg"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    </div>
-                    <div class="mb-6">
-                        <label for="height" class="block mb-2 text-sm font-medium text-gray-900">height(cm)</label>
-                        <input type="number" id="height" placeholder="height in cm"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    </div>
-                    <!-- Gender drop-down -->
-                    <div class="mb-6">
-                        <form class="max-w-sm mx-auto">
-                            <label for="gender" class="block mb-2 text-sm font-medium text-gray-900">Gender</label>
-                            <select id="gender"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                                <option value="" disabled selected>Select your gender</option>
-                                <option>male</option>
-                                <option>female</option>
-                            </select>
-                </fieldset>
+                </div>
+            </fieldset>
         </form>
         </div>
         <!-- Save and Edit Buttons -->
