--- a/each_category.html
+++ b/each_category.html
@@ -60,7 +60,7 @@
 
         <!-- recipe name -->
         <h1 class="font-bold text-5xl m-4 mb-6"><span id="recipeCategory"></span></h1>
-        
+
         <!-- search bar for recipes -->
         <form class="flex items-center w-full max-w-md px-4 mb-4">
             <label for="simple-search" class="sr-only">Search</label>
@@ -98,12 +98,14 @@
                 <img src="/images/kcal_icon.svg" alt="" class="size-20">
             </div>
         </div> -->
-        
+        <div id="recipes-container"></div>
+
         <!-- container to store recipe categories and with create your own button at the end -->
-        <div id="recipes-container">
+
+        <div id="recipesContainer">
             <!-- Create Your own -->
             <div id='create-recipe'
-                class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-5">
+                class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-2">
                 <div class="text-center">
                     <p class="text-xl font-semibold">Create another Recipe.</p>
                 </div>
