--- a/ingredients.html
+++ b/ingredients.html
@@ -10,16 +10,6 @@
     <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!------------------------------------------>
-    <!-- Bootstrap Library CSS JS CDN go here -->
-    <!------------------------------------------>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
-
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -35,22 +25,26 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
+    <script src="../scripts/general_nav_bottom.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
+    <script src="scripts/each_category.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
-
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <main>
+    <main class="pt-16">
+        <!-- Ingredients -->
+        <h1 class="font-bold text-5xl m-4 mb-6"> My Ingredients</h1>
         <form class="flex items-center w-full max-w-md px-4 mb-4">
             <label for="simple-search" class="sr-only">Search</label>
             <div class="relative w-full">
@@ -75,17 +69,27 @@
                 <span class="sr-only">Search</span>
             </button>
         </form>
+
+        <!-- cards to show ingredients in DB -->
+        <div id="ingredients-container"></div>
+
+        <!-- create your own ingredient-->
+        <div id="ingredientsContainer">
+            <!-- Create Your own -->
+            <div id='create-ingrdient'
+                class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-4">
+                <div class="text-center">
+                    <p class="text-xl font-semibold">Add another Ingredient.</p>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
-
-    <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="./scripts/home_skeleton.js"></script>
-    <script src="/scripts/doughnutGraph.js"></script>
-    <SCript src="/scripts/halfDoughnutGraph.js"></SCript>
-    <script src="/scripts/expandCard.js"></script>
-    <script src="../scripts/general_nav_bottom.js"></script>
+    <script src="./scripts/general_skeleton.js"></script>
+    <script src="./scripts/each_category.js"></script>
 </body>
 
 </html>
