--- a/navbars/home_nav_bottom.html
+++ b/navbars/home_nav_bottom.html
@@ -57,20 +57,9 @@
 <!-- Bottom Navigation Bar -->
 <footer id="general-bottom-nav" class="fixed bottom-0 inset-x-0 max-w-[375px] bg-[#2d58b1] text-white rounded-t-xl">
   <div class="flex justify-between items-center px-4 py-2">
-    <!-- Settings Icon -->
-    <button id="settings-btn" class="p-2" aria-label="Settings">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="24" height="24"
-        viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-        stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-        <path
-          d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
-        <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-      </svg>
-    </button>
 
     <!-- Plus Icon -->
-    <button id="plus-btn" class="p-2" aria-label="Add">
+    <button id="plus-btn" class="p-2 mx-auto" aria-label="Add">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24"
         viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
         stroke-linejoin="round">
