--- a/addIngredient.html
+++ b/addIngredient.html
@@ -31,14 +31,9 @@
 <body class="overflow-auto" style="height: calc(100vh - 112px);">
     <!-- Top Nav bar -->
     <nav id="navbarPlaceholder"></nav>
-    <main class="p-4">
-        <h1 class="text-2xl font-bold text-center mb-6">Create New Ingredient</h1>
+    <main class="p-4 mt-14">
+        <h1 class="text-4xl font-bold text-center mb-6" id="ingredientName">placeholder</h1>
         <form id="create-ingredient-form" class="max-w-md mx-auto">
-            <div class="mb-4">
-                <label for="ingredient-name" class="block text-lg font-medium text-gray-700">Ingredient Name</label>
-                <input type="text" id="ingredient-name" name="ingredient-name" required
-                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-            </div>
             <div class="mb-4">
                 <label for="fats" class="block text-lg font-medium text-gray-700">Fats (g)</label>
                 <input type="number" id="fats" name="fats" required
@@ -74,7 +69,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="./scripts/general_skeleton.js"></script>
-    <script src="scripts/each_recipe.js"></script>
+    <script src="scripts/addIngredient.js"></script>
 
 </body>
 
