--- a/addIngredient.html
+++ b/addIngredient.html
@@ -34,13 +34,8 @@
 
     <!-- Ingredients form -->
     <main class="p-4">
-        <h1 class="text-2xl font-bold text-center mb-6">Create New Ingredient</h1>
+        <h1 class="text-4xl font-bold text-center mb-6" id="ingredientName">placeholder</h1>
         <form id="create-ingredient-form" class="max-w-md mx-auto">
-            <div class="mb-4">
-                <label for="ingredient-name" class="block text-lg font-medium text-gray-700">Ingredient Name</label>
-                <input type="text" id="ingredient-name" name="ingredient-name" placeholder="ingredient name" required
-                    class="mt-1 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm">
-            </div>
             <div class="mb-4">
                 <label for="fats" class="block text-lg font-medium text-gray-700">Fats (g)</label>
                 <input type="number" id="fats" name="fats" placeholder="fats" required
