--- a/each_recipe.html
+++ b/each_recipe.html
@@ -28,13 +28,13 @@
 
 </head>
 
-<body class="space-y-16">
+<body class="">
   <!-- Top Nav bar -->
   <nav id="navbarPlaceholder"></nav>
 
   <!-- Main Content -->
   <main class="pb-24 pt-20 max-w-md mx-auto">
-    <h1 class="font-bold text-5xl m-4 mb-0"><span id="recipeName"></span></h1>
+    <h1 class="font-bold text-5xl text-center"><span id="recipeName"></span></h1>
     <!-- Graph area -->
     <div class="w-full p-4">
       <div id="graphContainer" class="w-full h-56 bg-gray-100">
@@ -98,7 +98,19 @@
   <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
   <script src="./scripts/general_skeleton.js"></script>
   <script src="scripts/each_recipe.js"></script>
-
+  <!-- Modal Structure -->
+  <div id="ingredientModal"
+    class="modal hidden fixed z-10 left-0 top-0 w-full h-full overflow-auto bg-gray-500 bg-opacity-75">
+    <div class="modal-content container mx-auto mt-14 p-5 bg-white w-full">
+      <span class="close cursor-pointer float-right font-bold">&times;</span>
+      <h2 class="text-2xl mb-4">Add Ingredient</h2>
+      <input type="text" id="ingredientSearch" placeholder="Search ingredients..."
+        class="p-2 border rounded w-full mb-4">
+      <div id="ingredientList" class="max-h-60 overflow-y-auto">
+        <!-- Ingredient items will be inserted here -->
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
