--- a/ingredients.html
+++ b/ingredients.html
@@ -39,7 +39,7 @@
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <main class="pt-16">
+    <main class="">
         <!-- Ingredients -->
         <h1 class="font-bold text-5xl m-4 mb-6"> My Ingredients</h1>
         <form class="flex items-center w-full max-w-md px-4 mb-4">
