--- a/each_recipe.html
+++ b/each_recipe.html
@@ -82,9 +82,16 @@
       </div>
     </div>
 
+    <!-- Choose ingredients -->
+    <div class="max-w-md rounded-full shadow-lg my-4 mx-auto">
+      <div class="px-6 py-4" id="ChooseIngredientsDiv" onclick="toggleModal()">
+        <div class="font-bold text-xl mb-2">Choose ingredients</div>
+      </div>
+    </div>
+
     <!-- Add ingredients -->
-    <div class="max-w-md rounded shadow-lg my-4 mx-auto">
-      <div class="px-6 py-4" id="addIngredientDiv" onclick="toggleModal()">
+    <div class="max-w-md rounded-full shadow-lg my-4 mx-auto">
+      <div class="px-6 py-4" id="AddIngredientsDiv" onclick="redirectIngredientsPage()">
         <div class="font-bold text-xl mb-2">Add new ingredients</div>
       </div>
     </div>
