--- a/each_recipe.html
+++ b/each_recipe.html
@@ -84,27 +84,36 @@
 
     <!-- Choose ingredients -->
     <div class="max-w-md rounded-full shadow-lg my-4 mx-auto">
-      <div class="px-6 py-4" id="ChooseIngredientsDiv" onclick="toggleModal()">
+      <div class="px-6 py-4" id="ChooseIngredientsDiv" onclick="redirectIngredientsPage()">
         <div class="font-bold text-xl mb-2">Choose ingredients</div>
       </div>
     </div>
 
     <!-- Add ingredients -->
     <div class="max-w-md rounded-full shadow-lg my-4 mx-auto">
-      <div class="px-6 py-4" id="AddIngredientsDiv" onclick="redirectIngredientsPage()">
+      <div class="px-6 py-4" id="AddIngredientsDiv" onclick="toggleModal()">
         <div class="font-bold text-xl mb-2">Add new ingredients</div>
       </div>
     </div>
 
     <!-- Modal Structure -->
     <div id="ingredientModal"
-      class="modal hidden fixed z-10 left-0 top-0 w-full h-full overflow-auto bg-gray-500 bg-opacity-75">
-      <div class="modal-content container mx-auto mt-14 p-5 bg-white w-full">
-        <span class="modal-close cursor-pointer float-right font-bold" onclick="toggleModal()">&times;</span>
-        <h2 class="text-2xl mb-4">Add Ingredient</h2>
-        <input type="text" id="ingredientSearch" placeholder="Search ingredients..."
-          class="p-2 border rounded w-full mb-4">
-        <div id="ingredientList" class="max-h-60 overflow-y-auto">
+      class="hidden fixed z-10 left-0 top-0 w-full h-full overflow-auto bg-gray-500 bg-opacity-75">
+      <div class="modal-content container mx-auto p-5 border shadow-lg rounded-md bg-white mt-20">
+        <!-- Modal Header -->
+        <div class="modal-header flex justify-between items-center pb-3">
+          <p class="text-2xl font-bold">Ingredient Name?</p>
+          <div class="modal-close cursor-pointer z-50" onclick="toggleModal()">
+            <span class="text-2xl font-semibold">&times;</span>
+          </div>
+        </div>
+
+        <!-- Modal Body -->
+        <div class="modal-body">
+          <form id="newIngredientForm">
+            <input type="text" id="ingredientName" placeholder="Enter here" required class="input mb-2" />
+            <button type="button" onclick="submitIngredientName()" class="btn">Proceed</button>
+          </form>
         </div>
       </div>
     </div>
