--- a/ingredients.html
+++ b/ingredients.html
@@ -17,8 +17,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <!-------------------------------------------->
@@ -27,12 +25,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body class="space-y-16">
@@ -67,14 +59,13 @@
             </button>
         </form>
 
-        <!-- cards to show ingredients in DB -->
-        <div id="ingredients-container"></div>
-
-        <!-- create your own ingredient-->
-        <div id="ingredientsContainer">
-            <!-- Create Your own -->
+        <div class="container flex-col mx-auto w-[95%] md:w-[75%]">
+            <div id="ingredientsContainer">
+                <!-- Existing ingredients append here -->
+            </div>
+            <!-- Create new ingredient -->
             <div id='create-ingredient'
-                class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-4"
+                class="flex flex-col mx-auto p-7 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-4"
                 onclick="toggleModal()">
                 <div class="text-center">
                     <p class="text-xl font-semibold">Add New Ingredient.</p>
@@ -106,8 +97,7 @@
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
-    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="../scripts/general_nav_bottom.js"></script>
+    <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="./scripts/general_skeleton.js"></script>
     <script src="./scripts/ingredients.js"></script>
 </body>
