--- a/ingredients.html
+++ b/ingredients.html
@@ -41,8 +41,10 @@
 
     <main class="">
         <!-- Ingredients -->
-        <h1 class="font-bold text-5xl m-4 mb-6"> My Ingredients</h1>
-        <form class="flex items-center w-full max-w-md px-4 mb-4">
+        <h1 class="font-bold text-5xl text-center mb-6"> My Ingredients</h1>
+
+        <!-- search bar -->
+        <form class="flex mx-auto w-full max-w-md px-4 mb-4">
             <label for="simple-search" class="sr-only">Search</label>
             <div class="relative w-full">
                 <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
