--- a/each_recipe.html
+++ b/each_recipe.html
@@ -36,15 +36,10 @@
   <main class="pb-24 pt-20 max-w-md mx-auto">
     <h1 class="font-bold text-5xl text-center"><span id="recipeName"></span></h1>
     <!-- Graph area -->
-    <div class="w-full p-4">
-      <div id="graphContainer" class="w-full h-56 bg-gray-100">
-        <!-- Graph will be inserted here -->
-      </div>
-    </div>
+
 
     <!-- Macro nutrients displayed in one line below the graph -->
-    <div class="flex justify-between px-4">
-
+    <div class="flex justify-between px-4 mt-10">
       <div class="container flex-col text-center">
         <p class="font-semibold">Protein:</p>
         <p id="protein"></p>
