--- a/main_modals/add_new_category_modal.html
+++ b/main_modals/add_new_category_modal.html
@@ -21,23 +21,25 @@
       </div>
       <!-- Add Category modal body -->
       <div class="p-4 md:p-5">
-        <form id="ingredientInfo">
+        <form id="categoryInfo">
           <div class="col-span-2">
             <label for="categoryName" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
             <input type="text" name="categoryName" id="categoryName"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
               placeholder="Category Name" required="">
+
+            <button id="addNewCategoryButton"
+              class="text-white inline-flex items-center bg-[#2d58b1] hover:bg-blue-800 focus:ring-2 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center m-2">
+              <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                  d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+                  clip-rule="evenodd">
+                </path>
+              </svg>
+              Add new category
+            </button>
         </form>
-        <button id="addNewCategoryButton"
-          class="text-white inline-flex items-center bg-[#2d58b1] hover:bg-blue-800 focus:ring-2 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center m-2">
-          <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-              d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-              clip-rule="evenodd">
-            </path>
-          </svg>
-          Add new category
-        </button>
       </div>
     </div>
   </div>
