--- a/profile.html
+++ b/profile.html
@@ -87,6 +87,11 @@
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                 </div>
                 <div class="mb-6">
+                    <label for="goalWeight" class="block mb-2 text-sm font-medium text-gray-900">goal weight(kg)</label>
+                    <input type="number" id="goalWeight" placeholder="weight in kg"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                </div>
+                <div class="mb-6">
                     <label for="height" class="block mb-2 text-sm font-medium text-gray-900">height(cm)</label>
                     <input type="number" id="height" placeholder="height in cm"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
